# prototaip-ah-adatper

./: .gitignore  .gitmodules  Dockerfile  README.md  config.yml.example  go.mod  go.sum  requirements.txt
.devcontainer/: DOCKERFILE  devcontainer.json
certs/: prototaip.crt.pem  prototaip.key.pem  prototaip.p12  prototaip.pub  sysop.ca  sysop.crt.pem  sysop.key.pem  truststore.p12
certs/test-consumer/: test-consumer.crt.pem  test-consumer.key.pem  test-consumer.p12
client-library-python/: setup.cfg  tox.ini
client-library-python/src/arrowhead_client/: dto.py  forms.py
client-library-python/src/arrowhead_client/client/: client_async.py  client_sync.py  core_service_responses.py
client-library-python/src/arrowhead_client/consumer/implementations/: requests_consumer.py
client-library-python/src/arrowhead_client/provider/implementations/: starlette_provider.py
files/: echo.ipynb  echo_old.ipynb  ipy_test.ipynb
src/: config.py  main.go  main.py  system_setup.py  test_consumer.py
tools/: README.md  docker-compose-core.yml  docker-compose-db.yml
tools/certs/: master.p12  master.pub  paa-test.p12  paa-test.pub  sysop.p12
tools/db/: exec.sh  init.sql
tools/properties/authorization/: application.properties
tools/properties/authorization/certificates/: authorization.p12  authorization.pub
tools/properties/orchestrator/: application.properties
tools/properties/orchestrator/certificates/: orchestrator.p12  orchestrator.pub  truststore.p12
tools/properties/serviceregistry/: application.properties
(+2 files in other folders)
