[metadata]
name = arrowhead-client
version = 0.5.0a
author = Jacob Nilsson
author_email = jacob.nilsson@ltu.se
license = EPL-2.0
description = Arrowhead client library
url = https://github.com/arrowhead-f/client-library-python
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.12
    Operating System :: POSIX :: Linux
    License :: OSI Approved :: Eclipse Public License 2.0 (EPL-2.0)

[options]
package_dir=
    =src
packages = find:
python_requires = >=3.12
install_requires =
    jinja2>=3.1.2,<3.2.0
    cryptography>=41.0.5,<41.1.0
    pydantic>=2.5.2,<2.6.0
    jwcrypto>=1.5.0,<1.6.0
    flask>=3.0.0,<3.1.0
    fastapi>=0.104.1,<0.105.0
    uvicorn>=0.24.0,<0.25.0
    requests>=2.31.0,<2.32.0
    aiohttp>=3.9.0,<3.10.0
    six
    pyyaml
setup_requires =
    setuptools
    build

[options.packages.find]
where=src
exclude =
    tests
    tests.*
    examples


[options.extras_require]
docs =
    sphinx_theme == 1.0
    sphinxawesome-theme == 1.19
    sphinx_rtd_theme == 1.0
    sphinx-autodoc-typehints == 1.14
    sphinx_toolbox == 3.0
    enum_tools == 0.9
